@@ -1,5 +1,9 @@
 2019-10-30  Tobias Burnus  <tobias@codesourcery.com>
 
+	* testsuite/libgomp.fortran/target9.f90: New.
+
+2019-10-30  Tobias Burnus  <tobias@codesourcery.com>
+
 	* testsuite/libgomp.fortran/aligned1.f03: Replace 'STOP' by 'stop'.
 	* testsuite/libgomp.fortran/alloc-comp-1.f90: Ditto.
 	* testsuite/libgomp.fortran/alloc-comp-2.f90: Ditto.
